--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ bower_components
 build/Release
 
 # Dependency directories
-functions/node_modules/
+node_modules/*
 
 # Optional npm cache directory
 .npm
