--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.7.0",
     "firebase-functions": "^3.3.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "pg": "^7.18.2"
   },
   "devDependencies": {
