--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,9 @@
     "firebase-functions": "^3.3.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
