[FEATURE] deploy only functions

--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -27,4 +27,4 @@ jobs:
         PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       with:
-        args: deploy
+        args: deploy --only functions
