--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Compile and deploy
       run: | 
-        cd functions/
+        cd functions
         npm ci
         npm install 
     - name: Firebase GitHub Action
