--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -22,9 +22,9 @@ jobs:
         npm ci
         npm install 
     - name: Firebase GitHub Action
-      uses: pizzafox/firebase-action@1.0.7
+      run: | 
+        npm install -g firebase-tools
+        firebase deploy --only functions 
       env:
         PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      with:
-        args: deploy --only functions
