--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [8.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -24,7 +24,7 @@ jobs:
     - name: Firebase GitHub Action
       run: | 
         npm install -g firebase-tools
-        firebase deploy --only functions 
+        firebase deploy --token $FIREBASE_TOKEN --project $PROJECT_ID
       env:
         PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
