--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,7 +4,6 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,23 +16,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm install 
-    - run: npm run build --if-present
-      env:
-        VUE_APP_FIREBASE_API_KEY: ${{ secrets.firebase_api_key_production }}
-        VUE_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.firebase_auth_domain_production }}
-        VUE_APP_FIREBASE_AUTH_DATABASE_URL: ${{ secrets.firebase_database_url_production }}
-        VUE_APP_FIREBASE_PROJECT_ID: ${{ secrets.firebase_project_id_production }} 
-        VUE_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.firebase_storage_bucket_production }} 
-        VUE_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.firebase_sender_id_production }} 
-        VUE_APP_FIREBASE_APP_ID: ${{ secrets.firebase_app_id_production }} 
-        VUE_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.firebase_measurement_id_production }} 
-        VUE_APP_API_ENDPOINTS: ${{ secrets.api_endpoints_production }}
+    - name: Compile and deploy
+      run: | 
+        cd functions
+        npm ci
+        npm install 
     - name: Firebase GitHub Action
-      uses: pizzafox/firebase-action@1.0.7
+      run: | 
+        npm install -g firebase-tools
+        firebase deploy --token $FIREBASE_TOKEN --project $PROJECT_ID
       env:
-        PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID_PRODUCTION }}
+        PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID_PRODUCTION}}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      with:
-        args: deploy
